--- a/CHANGES
+++ b/CHANGES
@@ -85,6 +85,7 @@ General changes:
 - Now using headPilotErrorDiag in makeJobReport() (pUtil)
 - Replaced all usages of type as a variable and replaced it with ftype (FileState, FileStateClient, all site movers, Monitor, RunJob*, mover)
 - Removed obsolete and unused lateRegistration() (pUtil)
+- Removed duplicated, obsolete and unused getField(), getNewQueuedataFilename() (FileHandling)
 
 To avoid creating dark data in case the server has already failed the job before the pilot has finished
 The problem can happen if the server times out the job before tar+zip of huge log files have not finished within two hours
@@ -124,38 +125,37 @@ Objectstore updates
     - Now using getNewOSStoragePath() in mover_put_data() to get updated path and os_id (Mover)
   OS identification
     - Created getOSIDFromName() (SiteInformation)
-    - Returning the os_id from getNewLogPath(), received in mover_put_data()
-    - Returning the os_id in getObjectstorePath() (SiteInformation)
-    - Receiving the os_id in getLogPath() (JobLog)
-    - Receiving the os_id in transferActualLogFile() (JobLog)
-    - Now receiving and returning os_id from getDDMStorage() (Mover)
-    - Receiving os_id in mover_put_data() and mover_put_data_new() (Mover)
-    - Receiving os_id in getFileInfo() (Mover)
-    - Sending os_id to mover_put_data() from transferActualLogFile() (JobLog)
-    - Added os_id argument to mover_put_data() and mover_put_data_new() (Mover)
-    - Sending os_id to getDDMStore() from mover_put_data() and mover_put_data_new() (Mover)
-    - Sending os_id to getObjectstorePath() from ..
-    - Added os_id argument to getObjectstorePath() (SiteInformation)
-    - Sending os_id to getObjectstoresField() from getObjectstorePath() (SiteInformation)
-    - Added os_id argument to getObjectstoresField() (SiteInformation)
-    - Sending os_id to getObjectstoresList() from getObjectstoresField() (SiteInformation)
-    - Added os_id argument to getObjectstoresList() (SiteInformation)
+    - Returning the os_bucket_id in getObjectstorePath() (SiteInformation)
+    - Receiving and returning the os_bucket_id in getLogPath() (JobLog)
+    - Receiving the os_bucket_id in transferActualLogFile() (JobLog)
+    - Now receiving and returning os_bucket_id from getDDMStorage() (Mover)
+    - Receiving os_bucket_id in mover_put_data() and mover_put_data_new() (Mover)
+    - Receiving os_bucket_id in getFileInfo() (Mover)
+    - Sending os_bucket_id to mover_put_data() from transferActualLogFile() (JobLog)
+    - Added os_bucket_id argument to mover_put_data() and mover_put_data_new() (Mover)
+    - Sending os_bucket_id to getDDMStorage() from mover_put_data() and mover_put_data_new() (Mover)
+    - Sending os_bucket_id to getObjectstorePath() from ..
+    - Added os_bucket_id argument to getObjectstorePath() (SiteInformation)
+    - Sending os_bucket_id to getObjectstoresField() from getObjectstorePath() (SiteInformation)
+    - Added os_bucket_id argument to getObjectstoresField() (SiteInformation)
+    - Sending os_bucket_id to getObjectstoresList() from getObjectstoresField() (SiteInformation)
+    - Added os_bucket_id argument to getObjectstoresList() (SiteInformation)
     - Removed useless code that looked for objectstores in queuedata in getObjectstoresList() (SiteInformation)
-    - Sending os_id to getNewQueuedata() from getObjectstoresList() (SiteInformation)
-    - Added os_id argument to getNewQueuedata() (SiteInformation)
-    - getNewQueuedata() can now find queuedata matching a given os_id (SiteInformation)
-    - Now returning os_id from mover_put_data() and mover_put_data_new() (Mover)
-    - Receiving os_id from mover_put_data() call in transferActualLogFile() and transferAdditionalFile() (JobLog)
-    - Receiving	os_id from mover_put_data() call in TransferFiles() (DeferredStageout)
-    - Receiving	os_id from mover_put_data() call in stageOut() (RunJob, RunJobEvent)
-    - Receiving	os_id from mover_put_data() call in moveLostOutputFiles() (pilot)
-    - Returning os_id from stageOut() and receiving it in transferToObjectStore() (RunJobEvent)
-    - Returning os_id from transferToObjectStore(), received in asynchronousOutputStager() (RunJobEvent)
+    - Sending os_bucket_id to getNewQueuedata() from getObjectstoresList() (SiteInformation)
+    - Added os_bucket_id argument to getNewQueuedata() (SiteInformation)
+    - getNewQueuedata() can now find queuedata matching a given os_bucket_id (SiteInformation)
+    - Now returning os_bucket_id from mover_put_data() and mover_put_data_new() (Mover)
+    - Receiving os_bucket_id from mover_put_data() call in transferActualLogFile() and transferAdditionalFile() (JobLog)
+    - Receiving	os_bucket_id from mover_put_data() call in TransferFiles() (DeferredStageout)
+    - Receiving	os_bucket_id from mover_put_data() call in stageOut() (RunJob, RunJobEvent)
+    - Receiving	os_bucket_id from mover_put_data() call in moveLostOutputFiles() (pilot)
+    - Returning os_bucket_id from stageOut() and receiving it in transferToObjectStore() (RunJobEvent)
+    - Returning os_bucket_id from transferToObjectStore(), received in asynchronousOutputStager() (RunJobEvent)
     - Sending os_bucket_id from asynchronousOutputStager() to updateEventRange() (RunJobEvent)
     - Added os_bucket_id argument to updateEventRange() (EventRange)
     - Sending objstoreID=os_bucket_id with updateEventRange call in updateEventRange() (EventRange)
     - Added os_id argument to getObjectstoreName() (SiteInformation)
-    - Added os_id argument to getObjectstoreBucketEndpoint() (SiteInformation)
+    - Added os_bucket_id argument to getObjectstoreBucketEndpoint() (SiteInformation)
     - Created findObjectStore(), getOSInfoFromBucketID(), getBucketID() (SiteInformation)
     - Created logBucketID variable (Job)
     - Reporting which OS bucket the log was written to, if any, in getJobMetrics() (PandaServerClient)
@@ -165,10 +165,29 @@ Objectstore updates
     - Added prodDBlockToken argument to getFileInfo() (Mover)
     - Sending prodDBlockToken to getFileInfo() from _mover_get_data_new() and mover_get_data() (Mover)
     - Now getting file info from different OS:s (if necessary) in getFileInfo() (Mover)
+    - Changed addToOSTransferDictionary() to store os_bucket_id instead of os_name (FileHandling)
+    - Updated calls to addToOSTransferDictionary() to send os_bucket_id instead of os_name (JobLog, RunJobEvent)
+    - Updated getOSNames() to work populate dictionary using os_bucket_id instead of os_name (FileHandling)
+    - Renamed getOSNames() to getOSTransferDictionary(), and updated the calls to it (FileHandling, PandaServerClient)
+    - Created getQueuenameFromOSBucketID() (SiteInformation)
+    - Removed preset queuename from getNewQueuedata() (SiteInformation)
+    - Added queuename argument to getObjectstorePath(), getObjectstoresField(), getObjectstoresList(), getNewQueuedata() (SiteInformation)
+    - Sending queuename argument to getNewQueuedata() from getObjectstoresList() (SiteInformation)
+    - Sending queuename argument to getObjectstoresList() from getObjectstoresField() (SiteInformation)
+    - Sending queuename argument to getObjectstoresField() from getObjectstorePath() (SiteInformation)
+    - Sending queuename argument to getObjectstorePath() from getLogPath() (JobLog)
+    - Added queuename argument to getDDMStorage() (Mover)
+    - Sending queuename argument from getDDMStorage() to getObjectstorePath() (Mover)
+    - Sending queuename argument from mover_put_data() and mover_put_data_new() to getDDMStorage() (Mover)
+    - Added queuename argument to getQueuedataFileName(), getField(), readpar() (SiteInformation)
+    - Sending queuename to getQueuedataFileName() from getObjectstoresList(), getNewQueuedata(), getField(), readpar() (SiteInformation)
+    - Sending queuename to getField() from getObjectstoresList(), getNewQueuedata() (SiteInformation)
+    - Added queuename parameter to readpar() and sending it forward to si.readpar() (pUtil)
   General changes
     - Minor cleanup; removed usage of alt, prodSourceLabel, testLevel, analysisJob, extradirs, proxyCheck in put_data(), removed proxyCheck in get_data() (S3ObjectstoreSiteMover)
     - Removed unnecessary cleanupOS() and shouldCleanupOS() (RunJob)
     - Removed useless getNewQueuedataXXX() (SiteInformation)
+    - Now removing current output files from stage-out queue in case of exception in transferToObjectStore() to prevent endless loop in asynchronousOutputStager() (RunJobEvent)
 
 Memory monitoring updates:
 - Calling __check_memory_usage() in monitoring loop, in monitor_job() (Monitor)
