--- a/CHANGES
+++ b/CHANGES
@@ -1,37 +1,10 @@
-
-Test failover to alt OS at UTA. code implemented. fake initial failure in S3 site mover
-
-Is MEM kill removed?
-
-
 Complete change log for PanDA Pilot version PICARD
 --------------------------------------------------
 
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-63.4:
-
-Now verifying that nentries is actually an integer (can aparently be 'null') in extractOutputFilesFromJSON() (FileHandling)
-Now using allowNoOutput list in extractOutputFilesFromJSON() to know when an empty file can be ignored (FileHandling)
-Added allowNoOutput to Job class, including handling (Job)
-Now sending job.allowNoOutput list to extractOutputFilesFromJSON() (RunJob)
-Overriding the input file guid for the TE input file list in __main__() (RunJobEvent)
-Adding a random string to the yampl channel name in __init__() (RunJobEvent)
-Telling AthenaMP the name of the yampl channel in __main__() (RunJobEvent)
-Updated getMaxMemoryUsageFromCGroups() and removed the need for ATLAS_CGROUPS_BASE (processes)
-Created getCGROUPSBasePath() used by getMaxMemoryUsageFromCGroups() (processes)
-Updated isCGROUPSSite() to use getCGROUPSBasePath() instead of using ATLAS_CGROUPS_BASE (processes)
-Added support for AthSimulation* releases (e.g. for jobs with homePackage=AthSimulationBase/1.0.3) in getProperASetup() and getProperSiterootAndCmtconfig() (ATLASExperiment)
-Created getSiterootWithHomepackage(), used by getProperSiterootAndCmtconfig() and getProperASetup() (ATLASExperiment)
-Created getSplitHomePackage() used by getSiterootWithHomepackage(), getProperASetup() (ATLASExperiment)
-Now extracting output files from jobReport for user jobs as well in __main__() (RunJob)
-Avoiding adding cmt setup (getProdCmd2() call) for AthSimulation* releases in getJobExecutionCommand() (ATLASExperiment)
-Updated xml source string from "NG Panda server" to "aRC" in getPoolFileCatalogNG() (Mover)
-Renamed function getPoolFileCatalogNG() to getPoolFileCatalogND() (Mover)
-Updated getFiletypeFromDictionary() to handle ND properly (filetype DISK is implied) (Mover)
-Now setting copytool for ND in extractCopytoolForPFN() (Mover)
-Using readlink to unfold any soft linked file paths in put_data() (mvSiteMover)
+Pre-release versions
 
 63.4.1:
 
@@ -53,16 +26,6 @@ Added protection for failure to find alternativeName in getTiersOfATLASAlternati
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 64.0
-
-LOCAL SITE MOVER XXX
-
-TODO: update pUtil::getStdoutDictionary() to support the tail of the last updated AthenaMP log file; also update PandaServerClient::updatePandaServer() to
-take the latest log file and send it to the text indexer in debug mode (see Rod's mail on Nov. 24)
-
-DO NOT KILL JOBS THAT EXCEEDED MAX MEMORY!!!
-
-
-
 
 General changes:
 - Replaced useFileStager and directIn with _dummy strings in getPrefices() and shouldPFC4TURLsBeCreated() since they are not used in these functions (Mover)
