--- a/CHANGES
+++ b/CHANGES
@@ -257,6 +257,13 @@ REMOVE RunJobMira.py FROM DISTRIBUTION
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+64.1
+
+Moved import of requests module into getSecurityKey() (ATLASSiteInformation)
+Removing broken soft links in removeRedundantFiles() (ATLASExperiment)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
