--- a/CHANGES
+++ b/CHANGES
@@ -271,6 +271,12 @@ Corrected bad indentation in broken link finder in removeRedundantFiles() (ATLAS
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+64.3
+
+Protected against too old python versions while importing argparse. Problem seen on Chinese HPC site (EventStager)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
