--- a/CHANGES
+++ b/CHANGES
@@ -274,6 +274,8 @@ Corrected bad indentation in broken link finder in removeRedundantFiles() (ATLAS
 64.3
 
 Protected against too old python versions while importing argparse. Problem seen on Chinese HPC site (EventStager)
+Updated setUseTokenExtractor() to use payload setup string to decide whether the Token Extractor should be used or not, instead of hardcoded release string (RunJobEvent)
+Sending runCommandList[0] to setUseTokenExtractor() instead of release string, from __main__() (RunJobEvent)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
