--- a/CHANGES
+++ b/CHANGES
@@ -281,6 +281,7 @@ Event service:
 - Sending runCommandList[0] to setUseTokenExtractor() instead of release string, from __main__() (RunJobEvent)
 - Now sending jobId to updateEventRange() from asynchronousOutputStager(), listener() (RunJobEvent)
 - Added jobId argument to updateEventRange() (EventRanges)
+- Now supporting softkill in asynchronousOutputStager() (RunJobEvent)
 
 Updates from Wen Guan
 - Fixed ATLAS site information
