--- a/CHANGES
+++ b/CHANGES
@@ -283,6 +283,7 @@ Event service:
 - Added jobId argument to updateEventRange() (EventRanges)
 - Now supporting softkill in asynchronousOutputStager() (RunJobEvent)
 - Added __abort, __tobekilled + setters and getters - used in __main__() (RunJobEvent)
+- Created new error code 1237, ERR_ESKILLEDBYSERVER, 'Event Service job killed by server'
 
 Updates from Wen Guan
 - Fixed ATLAS site information
