--- a/CHANGES
+++ b/CHANGES
@@ -292,6 +292,13 @@ Updates from Wen Guan
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+
+
+transfertype fax Job.py
+
+
+
+
 64.4
 
 General changes
@@ -302,6 +309,50 @@ General changes
 Event service
 - Setting PILOT_EVENTRANGECHANNEL env variable instead of manipulating jobPars, in __main__() (RunJobEvent)
 - Wen Guan: Fix in init function which prevented the S3 site mover from being used (S3ObjectstoreSiteMover)
+
+Direct access updates (to enable this functionality for ES)
+- Using transferType fax in shouldPFC4TURLsBeCreated()
+- Sending job.transferType to getFileAccessInfo() from stageIn() (RunJob)
+- Sending transferType to getFileAccessInfo() from shouldPFC4TURLsBeCreated() (Mover)
+- Sending transferType to createPFC4TURLs() from PFC4TURLs() (Mover)
+- Added transferType argument to createPFC4TURLs() (Mover)
+- Sending transferType to getTURLs() from createPFC4TURLs() (Mover)
+- Added transferType argument to getTURLs() (Mover)
+- Sending transferType to getPrefices() from getTURLs() (Mover)
+- Added transferType argument to getPrefices() (Mover)
+- Sending transferType to getFileAccessInfo() from getPrefices() (Mover)
+- Sending job.transferType to pUtil.getFileAccessInfo() (RunJobHpcEvent)
+- Added transferType argument to getFileAccessInfo() (pUtil)
+- Using transferType and direct_access_wan in getFileAccessInfo() (pUtil)
+- Added transferType argument to getCopyFileAccessInfo() (SiteInformation)
+- Sending transferType to getCopyFileAccessInfo() from getDirectInAccessMode() (SiteInformation)
+- Removed useFileStager from getCopyFileAccessInfo() and getDirectInAccessMode() (SiteInformation)
+- Using transferType and direct_access_wan in getCopyFileAccessInfo() (SiteInformation)
+- Moved getDirectAccess(), useDirectAccessLAN(), useDirectAccessWAN() from Mover to FileHandling
+- Now using getDirectAccess() in getDirectInAccessMode() (SiteInformation)
+- Removed directIn from getCopyFileAccessInfo() (SiteInformation)
+- Now using self.__siteInfo.getCopyFileAccessInfo() instead of pUtil.getFileAccessInfo() (RunJobHpcEvent)
+- Now using si.getCopyFileAccessInfo() instead of pUtil.getFileAccessInfo() (RunJob)
+- Added experiment argument to getTURLs(), createPFC4TURLs(), PFC4TURLs() (Mover)
+- Sending experiment to getTURLs() from createPFC4TURLs() (Mover)
+- Sending experiment to createPFC4TURLs() from PFC4TURLs() (Mover)
+- Sending experiment to PFC4TURLs() from _mover_get_data_new() and mover_get_data() (Mover)
+- Added experiment argument to getPrefices() (Mover)
+- Sending experiment to getPrefices() from getTURLs() (Mover)
+- Now using si.getCopyFileAccessInfo() instead of pUtil.getFileAccessInfo() in getPrefices(), shouldPFC4TURLsBeCreated() (Mover)
+- Added experiment argument to shouldPFC4TURLsBeCreated() (Mover)
+- Sending experiment to shouldPFC4TURLsBeCreated() from PFC4TURLs() (Mover)
+- Removed getFileAccessInfo() which has now become a duplicate of SiteInformation.getCopyFileAccessInfo() (pUtil)
+- Renamed getCopyFileAccessInfo() to getFileAccessInfo() (SiteInformation, Mover, RunJob, RunJobHpcEvent)
+- Removed sending stageIn boolean to getFileAccessInfo() from getDirectInAccessMode() (SiteInformation)
+- Added transferType argument to getDirectInAccessMode() (SiteInformation)
+- Sending transferType to getDirectInAccessMode() from getStageInMode() (FAXSiteMover, GFAL2SiteMover, LocalSiteMover, xrdcpSiteMover, xrootdObjectstoreSiteMover)
+- Sending transferType to getStageInMode() from get_data() (FAXSiteMover, GFAL2SiteMover, LocalSiteMover, xrdcpSiteMover, xrootdObjectstoreSiteMover)
+- Added transferType argument to getStageInMode() (FAXSiteMover, GFAL2SiteMover, LocalSiteMover, xrdcpSiteMover, xrootdObjectstoreSiteMover)
+- Extracting transferType in get_data() (FAXSiteMover, GFAL2SiteMover, LocalSiteMover, xrdcpSiteMover, xrootdObjectstoreSiteMover)
+- Sending transferType to get_data() from sitemover_get_data() (Mover)
+- Sending transferType to sitemover_get_data() from _mover_get_data_new(), mover_get_data() (Mover)
+- Added transferType argument to sitemover_get_data() (Mover)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
