--- a/CHANGES
+++ b/CHANGES
@@ -292,6 +292,12 @@ Updates from Wen Guan
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+64.4
+
+Corrected broken skipping DBRelease mechanism (Mover)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
