--- a/CHANGES
+++ b/CHANGES
@@ -294,7 +294,8 @@ Updates from Wen Guan
 
 64.4
 
-Corrected broken skipping DBRelease mechanism (Mover)
+Bug fix
+- Removed tmp return from handleDBRelease() which caused skipping of DBRelease file to fail (Mover)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
