--- a/CHANGES
+++ b/CHANGES
@@ -292,14 +292,21 @@ Updates from Wen Guan
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+64.4
 
+General change
+- Prevented outdated skipping of missing input files, to avoid complications seen on ND when one skipped file is a log file, in sitemover_get_data() (Mover)
+
+Bug fix
+- Removed tmp return from handleDBRelease() which caused skipping of DBRelease file to fail (Mover)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 transfertype fax Job.py
+remove overwrite argument from getNewQueuedata, is usage from pUtil necessary? download only when needed?
 
 
-
-
-64.4
+65.0
 
 General changes
 - Added taskId argument to addEnvVars2Cmd() (ATLASExperiment)
@@ -312,6 +319,25 @@ Bug fixes
 Event service
 - Setting PILOT_EVENTRANGECHANNEL env variable instead of manipulating jobPars, in __main__() (RunJobEvent)
 - Wen Guan: Fix in init function which prevented the S3 site mover from being used (S3ObjectstoreSiteMover)
+- Sending os_bucket_id to getQueuedataFileName() from getObjectstoresList(), getNewQueuedata(), getField() (SiteInformation)
+- Added os_bucket_id argument to getQueuedataFileName() (SiteInformation)
+- Using os_bucket_id in queuedata filename in getQueuedataFileName() (SiteInformation)
+- Will abandon getNewQueuedata() if file already exists (filename should now be unique to the bucket id) (SiteInformation)
+- Added os_bucket_id argument to getNewQueuedata() (SiteInformation)
+- Sending os_bucket_id to getField() from getObjectstoresList() (SiteInformation)
+- Added os_bucket_id argument to getField() (SiteInformation)
+- Extracting os_bucket_id in get_data(), put_data() (S3ObjectstoreSiteMover, S3SiteMover)
+- Sending os_bucket_id to stageOut() from put_data() (S3ObjectstoreSiteMover, S3SiteMover)
+- Sending os_bucket_id to stageIn() from get_data() (S3ObjectstoreSiteMover, S3SiteMover)
+- Added os_bucket_id argument to setup(), stageIn(), stageOut() (S3ObjectstoreSiteMover)
+- Sending os_bucket_id to setup() from stageIn(), stageOut() (S3ObjectstoreSiteMover)
+- Sending os_bucket_id to getObjectstoresField() from setup() (S3ObjectstoreSiteMover)
+- Sending os_bucket_id to sitemover_get_data() from mover_get_data(), _mover_get_data_new() (Mover)
+- Added os_bucket_id argument to sitemover_get_data() (Mover)
+- Sending os_bucket_id to get_data() from sitemover_get_data() (Mover)
+- Sending os_bucket_id to sitemover_put_data() from mover_put_data(), mover_put_data_new() (Mover)
+- Added os_bucket_id argument to sitemover_put_data() (Mover)
+- Sending os_bucket_id to put_data() from sitemover_put_data() (Mover)
 
 Direct access updates (to enable this functionality for ES)
 - Using transferType fax in shouldPFC4TURLsBeCreated()
