--- a/CHANGES
+++ b/CHANGES
@@ -387,6 +387,7 @@ Updates from Wen Guan:
 - Now using curl to get keypair (ATLASSiteInformation, pUtil)
 - Add hostname check with http proxy (S3ObjectstoreSiteMover)
 - Fixed hostname is None issue (S3ObjectstoreSiteMover)
+- Solve the region problem with AWS OS (S3ObjectstoreSiteMover, objectstoreSiteMover)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
