--- a/CHANGES
+++ b/CHANGES
@@ -321,6 +321,11 @@ Bug fixes
 - Removed tmp return from handleDBRelease() which caused skipping of DBRelease file to fail (Mover)
 - Removed duplicated getFileInfoFromRucio() (SiteMover)
 - Corrected _output to output in _getRemoteFileSizeLCGLS() (SiteMover)
+- Sending workDir to finishTracingReport() from sitemover_get_data(), sitemover_put_data() (Mover)
+- Sending workdir to finishTracingReport() from chirp_put_data() (Mover)
+- Sending os.getcwd() to finishTracingReport() from sitemover_get_all_data() (Mover)
+- Sending job.workdir to chirp_put_data() from mover_put_data_new(), mover_put_data_new() (Mover)
+- Added workdir argument to finishTracingReport(), chirp_put_data() (Mover)
 
 Alt stage-out
 - Added altStageOut data member plus handling (Job)
