--- a/CHANGES
+++ b/CHANGES
@@ -305,6 +305,8 @@ Bug fix
 transfertype fax Job.py
 
 test allowNoOutput with user jobs
+pUtil.createLockFile(False, self.__env['jobDic'][k][1].workdir, lockfile="MEMORYEXCEEDED")
+
 
 65.0
 
@@ -333,6 +335,9 @@ Alt stage-out
 - Using altStageOut in allowAlternativeStageOut() and forceAlternativeStageOut() (ATLASSiteInformation)
 - Sending job.altStageOut to forceAlternativeStageOut() and allowAlternativeStageOut() from mover_put_data() and mover_put_data_new() (Mover)
 - Turning off any forced alt stage-out for objectstore transfers in forceAlternativeStageOut() (ATLASSiteInformation)
+
+Memory monitoring
+- Fix for dangling utility_subprocess (RunJob, RunJobEvent)
 
 Event service
 - Setting PILOT_EVENTRANGECHANNEL env variable instead of manipulating jobPars, in __main__() (RunJobEvent)
