Added comment for v 64.5

--- a/CHANGES
+++ b/CHANGES
@@ -302,6 +302,13 @@ Bug fix
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+64.5
+
+Bug fix
+- Corrected dangling variable (utility_subprocess) in __main__() (RunJob, RunJobEvent)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 transfertype fax Job.py
 
 test allowNoOutput with user jobs
